improve test coverate of Ctags.doCtags() a bit